# wayrs

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
wayrs-client/: CHANGELOG.md  Cargo.toml  wayland.xml
wayrs-client/examples/: custom_transport.rs  list_globals.rs  output_info.rs  output_watcher.rs
wayrs-client/src/: any_transport.rs  connection.rs  debug_message.rs  event_queue.rs  global.rs  interface.rs  lib.rs  object.rs  protocol.rs  proxy.rs  socket.rs  wire.rs
wayrs-core/: CHANGELOG.md  Cargo.toml
wayrs-core/src/: lib.rs  ring_buffer.rs  transport.rs
wayrs-core/src/transport/: unix.rs
wayrs-cursor/: Cargo.toml
wayrs-cursor/src/: lib.rs
wayrs-egl/: CHANGELOG.md  Cargo.toml  build.rs
wayrs-egl/examples/: triangle.rs
wayrs-egl/src/: buffer.rs  drm.rs  egl.rs  egl_ffi.rs  errors.rs  gbm.rs  lib.rs  xf86drm_ffi.rs
wayrs-proto-parser/: CHANGELOG.md  Cargo.toml
wayrs-proto-parser/src/: lib.rs  parser.rs  types.rs
wayrs-protocols/: CHANGELOG.md  Cargo.toml
wayrs-protocols/src/: lib.rs
wayrs-scanner/: CHANGELOG.md  Cargo.toml
wayrs-scanner/src/: lib.rs  mini_syn.rs  parser.rs  types.rs  utils.rs
wayrs-shm-alloc/: Cargo.toml
wayrs-shm-alloc/src/: lib.rs
wayrs-utils/: CHANGELOG.md  Cargo.toml
wayrs-utils/src/: cursor.rs  dmabuf_feedback.rs  keyboard.rs  lib.rs  outputs.rs  seats.rs  shm_alloc.rs  timer.rs
