[workspace]
members = [
  "wayrs-client",
  "wayrs-scanner",
  "wayrs-protocols",
  "wayrs-utils",
  "wayrs-egl",
  "wayrs-proto-parser",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/MaxVerevkin/wayrs"
readme = "README.md"
edition = "2021"
rust-version = "1.67"
license = "MIT"
