[package]
name = "wayrs-client"
description = "A simple wayland library"
repository = "https://github.com/MaxVerevkin/wayrs"
readme = "../README.md"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client"]

[dependencies]
wayrs-scanner = { version = "0.6", path = "../wayrs-scanner" }
thiserror = "1.0"

[dependencies.nix]
version = "0.26"
default-features = false
features = ["socket", "uio"]

[dependencies.tokio]
version = "1"
optional = true
default-features = false
features = ["net"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
