[package]
name = "wayrs-client"
version = "1.0.1"
description = "A simple wayland library"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wayrs-scanner = { version = "0.13", path = "../wayrs-scanner" }
thiserror = "1.0"

[dependencies.nix]
version = "0.27"
default-features = false
features = ["socket", "uio"]

[dependencies.tokio]
version = "1"
optional = true
default-features = false
features = ["net"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
