[package]
name = "wayrs-client"
version = "1.2.0"
description = "A simple wayland library"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wayrs-core = { version = "1.0", path = "../wayrs-core" }
wayrs-scanner = { version = "0.15.3", path = "../wayrs-scanner" }

[dependencies.tokio]
version = "1"
optional = true
default-features = false
features = ["net"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
