[package]
name = "wayrs-core"
version = "0.1.0"
description = "The core Wayland types for wayrs"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0"
nix = { version = "0.28", default-features = false, features = ["socket", "uio"] }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
