[package]
name = "wayrs-core"
version = "1.0.3"
description = "The core Wayland types for wayrs"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
