[package]
name = "wayrs-egl"
version = "0.6.0"
description = "EGL for wayrs-client"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "egl", "opengl"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gbm-sys = "0.3"
libc = "0.2"
wayrs-client = { version = "1.0", path = "../wayrs-client" }
wayrs-protocols = { version = "0.14", path = "../wayrs-protocols", features = ["linux-dmabuf-v1"] }

[dev-dependencies]
gles31 = "1.0"
wayrs-protocols = { version = "0.14", path = "../wayrs-protocols", features = ["xdg-shell"] }
wayrs-utils = { version = "0.17", path = "../wayrs-utils", features = ["dmabuf_feedback"] }
