[package]
name = "wayrs-proto-parser"
version = "2.0.2"
description = "Parser for wayland protocol xml files"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "protocol", "parser", "xml"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
quick-xml = "0.36"
thiserror = "1.0"
