[package]
name = "wayrs-protocols"
description = "A collection of Wayland protocols to use with wayrs-client"
repository = "https://github.com/MaxVerevkin/wayrs"
readme = "../README.md"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client"]

[features]
# wayland-stable
xdg-shell = []
viewporter = []
presentation-time = []
# wayland-staging
content-type-v1 = []
drm-lease-v1 = []
ext-idle-notify-v1 = []
ext-session-lock-v1 = []
fractional-scale-v1 = []
single-pixel-buffer-v1 = []
tearing-control-v1 = []
xdg-activation-v1 = []
xwayland-shell-v1 = []
# wayland-unstable
fullscreen-shell-unstable-v1 = []
idle-inhibit-unstable-v1 = []
input-method-unstable-v1 = []
input-timestamps-unstable-v1 = []
keyboard-shortcuts-inhibit-unstable-v1 = []
linux-dmabuf-unstable-v1 = []
linux-explicit-synchronization-unstable-v1 = []
pointer-constraints-unstable-v1 = []
pointer-gestures-unstable-v1 = []
primary-selection-unstable-v1 = []
relative-pointer-unstable-v1 = []
tablet-unstable-v1 = []
tablet-unstable-v2 = []
text-input-unstable-v1 = []
text-input-unstable-v3 = []
xdg-decoration-unstable-v1 = ["xdg-shell"]
xdg-foreign-unstable-v1 = []
xdg-foreign-unstable-v2 = []
xdg-output-unstable-v1 = []
xdg-shell-unstable-v5 = []
xdg-shell-unstable-v6 = []
xwayland-keyboard-grab-unstable-v1 = []
# wlr-unstable
wlr-data-control-unstable-v1 = []
wlr-export-dmabuf-unstable-v1 = []
wlr-foreign-toplevel-management-unstable-v1 = []
wlr-gamma-control-unstable-v1 = []
wlr-input-inhibitor-unstable-v1 = []
wlr-layer-shell-unstable-v1 = ["xdg-shell"]
wlr-output-management-unstable-v1 = []
wlr-output-power-management-unstable-v1 = []
wlr-screencopy-unstable-v1 = []
wlr-virtual-pointer-unstable-v1 = []

[dependencies]
wayrs-client = { version = "0.8", path = "../wayrs-client" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
