[package]
name = "wayrs-protocols"
version = "0.14.6+1.40"
description = "A collection of Wayland protocols to use with wayrs-client"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# wayland-stable
linux-dmabuf-v1 = []
presentation-time = []
tablet-v2 = []
viewporter = []
xdg-shell = []
# wayland-staging
alpha-modifier-v1 = []
commit-timing-v1 = []
content-type-v1 = []
cursor-shape-v1 = ["tablet-v2"]
drm-lease-v1 = []
ext-data-control-v1 = []
ext-foreign-toplevel-list-v1 = []
ext-idle-notify-v1 = []
ext-image-capture-source-v1 = ["ext-foreign-toplevel-list-v1"]
ext-image-copy-capture-v1 = ["ext-image-capture-source-v1"]
ext-session-lock-v1 = []
ext-transient-seat-v1 = []
ext-workspace-v1 = []
fifo-v1 = []
fractional-scale-v1 = []
linux-drm-syncobj-v1 = []
security-context-v1 = []
single-pixel-buffer-v1 = []
tearing-control-v1 = []
xdg-activation-v1 = []
xdg-dialog-v1 = ["xdg-shell"]
xdg-system-bell-v1 = []
xdg-toplevel-drag-v1 = ["xdg-shell"]
xdg-toplevel-icon-v1 = ["xdg-shell"]
xwayland-shell-v1 = []
# wayland-unstable
fullscreen-shell-unstable-v1 = []
idle-inhibit-unstable-v1 = []
input-method-unstable-v1 = []
input-timestamps-unstable-v1 = []
keyboard-shortcuts-inhibit-unstable-v1 = []
# linux-dmabuf-unstable-v1 -> linux-dmabuf-v1
linux-explicit-synchronization-unstable-v1 = []
pointer-constraints-unstable-v1 = []
pointer-gestures-unstable-v1 = []
primary-selection-unstable-v1 = []
relative-pointer-unstable-v1 = []
tablet-unstable-v1 = []
# tablet-unstable-v2 -> tablet-v2
text-input-unstable-v1 = []
text-input-unstable-v3 = []
xdg-decoration-unstable-v1 = ["xdg-shell"]
xdg-foreign-unstable-v1 = []
xdg-foreign-unstable-v2 = []
xdg-output-unstable-v1 = []
xdg-shell-unstable-v5 = []
xdg-shell-unstable-v6 = []
xwayland-keyboard-grab-unstable-v1 = []
# wlr-unstable
wlr-data-control-unstable-v1 = []
wlr-export-dmabuf-unstable-v1 = []
wlr-foreign-toplevel-management-unstable-v1 = []
wlr-gamma-control-unstable-v1 = []
wlr-input-inhibitor-unstable-v1 = []
wlr-layer-shell-unstable-v1 = ["xdg-shell"]
wlr-output-management-unstable-v1 = []
wlr-output-power-management-unstable-v1 = []
wlr-screencopy-unstable-v1 = []
wlr-virtual-pointer-unstable-v1 = []

[dependencies]
wayrs-client = { version = "1.0", path = "../wayrs-client" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
