[package]
name = "wayrs-scanner"
description = "Generates code for wayrs-client from xml files"
repository = "https://github.com/MaxVerevkin/wayrs"
readme = "../README.md"
version = "0.11.0"
edition = "2021"
rust-version = "1.65"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client", "scanner"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "1.3"
quick-xml = "0.30"
quote = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["parsing", "proc-macro"]
