[package]
name = "wayrs-scanner"
version = "0.12.2"
description = "Generates code for wayrs-client from xml files"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client", "scanner"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "1.3"
quick-xml = "0.30"
quote = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["parsing", "proc-macro"]
