[package]
name = "wayrs-scanner"
version = "0.14.0"
description = "Generates code for wayrs-client from xml files"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client", "scanner"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
wayrs-proto-parser = { version = "2.0", path = "../wayrs-proto-parser" }
proc-macro2 = "1.0"
proc-macro-crate = "3"
quote = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["parsing", "proc-macro"]
