[package]
name = "wayrs-shm-alloc"
description = "A helper crate for wayrs-client for shared memory allocation"
repository = "https://github.com/MaxVerevkin/wayrs"
readme = "../README.md"
version = "0.4.0-beta.0"
edition = "2021"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client", "shm"]

[dependencies]
memmap2 = "0.5"
shmemfdrs = "0.1"
wayrs-client = { version = "0.3.0", path = "../wayrs-client" }
