[package]
name = "wayrs-utils"
description = "A collection of utils and abstractions for wayrs-client"
repository = "https://github.com/MaxVerevkin/wayrs"
readme = "../README.md"
version = "0.9.0"
edition = "2021"
rust-version = "1.65"
license = "MIT"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client"]

[features]
seats = []
shm_alloc = ["memmap2", "shmemfdrs"]
cursor = ["shm_alloc", "xcursor", "wayrs-protocols/cursor-shape-v1"]
keyboard = ["xkbcommon"]
dmabuf_feedback = ["libc", "memmap2", "wayrs-protocols/linux-dmabuf-unstable-v1"]

[dependencies]
libc = { version = "0.2", optional = true }
memmap2 = { version = "0.7", optional = true }
shmemfdrs = { version = "0.1", optional = true }
thiserror = "1.0"
wayrs-client = { version = "0.12", path = "../wayrs-client" }
wayrs-protocols = { version = "0.12", path = "../wayrs-protocols", optional = true }
xcursor = { version = "0.3", optional = true }
xkbcommon = { version = "0.6", optional = true }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
