[package]
name = "wayrs-utils"
version = "0.16.1"
description = "A collection of utils and abstractions for wayrs-client"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]
keywords = ["wayland", "client"]
repository.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
seats = []
shm_alloc = ["dep:memmap2", "dep:shmemfdrs2"]
cursor = ["shm_alloc", "dep:xcursor", "wayrs-protocols/cursor-shape-v1"]
keyboard = ["dep:xkbcommon"]
dmabuf_feedback = ["dep:memmap2", "wayrs-protocols/linux-dmabuf-v1"]

[dependencies]
libc = "0.2"
memmap2 = { version = "0.9", optional = true }
shmemfdrs2 = { version = "1.0", optional = true }
wayrs-client = { version = "1.1", path = "../wayrs-client" }
wayrs-protocols = { version = "0.14", path = "../wayrs-protocols", optional = true }
xcursor = { version = "0.3.7", optional = true }
xkbcommon = { version = "0.8", optional = true }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
